--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dot-env": "^0.0.1",
     "maplibre-gl": "^4.6.0",
+    "mongoose": "^8.6.0",
     "nodemon": "^3.1.4",
     "radar-sdk-js": "^4.4.1",
     "react": "^18.3.1",
